# omniVoice-server

./: .env.example  README.md  config.py  main.py  pyproject.toml  schemas.py  tts_service.py
tests/: test.py  test_local.py
tests/resource/: test.txt
